# The_Theory_of_Difference

./: .gitignore  12-期货市场的差异论解读.md  20李代数枚举.py  Appearing Before Appearing: A Structural Account of Pre-Phenomenal Manifestation.md  CHANGELOG.md  CITATION.cff  DERIVATION_TRACKING.md  DEVELOPER_REVIEW.md  GIT_SETUP_CHECKLIST.md  LICENSE  README.md  STATUS.md  TASK_INDEX.md  check_issues.py  config.yaml  debug_stability_blind.py  dialogue-exported.md  generate_mapping.py  market_snapshot.py  pyproject.toml  requirements-all.txt  requirements-ml.txt  requirements-ui.txt  requirements.txt  setup_fast.py  tatus  test_fix.py  tore repository root and deleted drafts  worlbase V4.0快照及大修.md  worlbase v4.7.md  worlbase体系快照 V3.9.md  worldbae V3.8快照.md  worldbase V4.1快照.md  worldbase V4.2更新.md  worldbase V4.3 更新.md  worldbase V4.4 更新.md  worldbase V4.5 更新.md  worldbase V4.6更新.md  worldbase V5.0 全新修正版.md  worldbase V5.0.md  (+59 more)
10-期货价格结构检索系统/price-structure/: .env.example  .gitignore  CHANGELOG.md  MySQL同步功能说明.md  README.md  TASK_INDEX.md  WORKFLOW.md  _read_scan.py  _read_scan2.py  analyze_results.py  check_db_issues.py  check_logic.py  check_ni0_5m.py  check_ni0_5m_data.py  check_ni0_data.py  check_syntax.py  check_tables.py  commit_msg.txt  config.yaml  daily_update_and_scan.py  debug_agg.py  debug_analysis_report.md  debug_mt.py  debug_potential.py  eval_scan.py  find_motion.py  fix_scripts_db.py  format_opps.py  git_diag.py  pyproject.toml  read_docs.py  read_git_docs.py  read_git_files.py  requirements.txt  run_scan.py  scan_motion.py  search_motion.py  signal_analysis.py  signal_analysis_report.json  test_motion.py  (+10 more)
10-期货价格结构检索系统/price-structure/.streamlit/: config.toml
10-期货价格结构检索系统/price-structure/data/: cu0.csv  symbol_meta.yaml
10-期货价格结构检索系统/price-structure/docs/: 01_总纲.md  02_术语与对象词典.md  02_术语表.md  03_弱公理.md  03_弱公理与研究假设.md  04_对象模型.md  04_数据字典.md  05_对象模型规范.md  06_结构DSL规范.md  07_样本库标注规范.md  07_结构DSL规范.md  08_样本库.md  08_相似性定义.md  待办事项.md  (+26 more)
(+2162 files in other folders)
